# JUSLAG

./: .gitignore  README.md  lead_lag_strategy.py  pyproject.toml
.github/workflows/: daily-juslag.yml
config/: app.ci.yaml  app.example.yaml  logging.example.yaml
data/: history.jsonl  strategy_history.jsonl
data/reports/: 2026-07-09.json  2026-07-10.json  2026-07-13.json  2026-07-14.json  2026-07-15.json  2026-07-16.json  2026-07-17.json  2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json
docs/: JUSLAGの戦略ルールを設定で切り替え可能に.md  architecture.md  b-fad-stack.md  backtest_parameter_study_20260413.md  backtest_parameter_study_20260414.md  daily_research_batch_architecture.md  execution_plan_normalized_lots.md  reproduction_plan.md  review_notes.md  scripts.md
scripts/data/: fetch_corporate_actions.py  fetch_factor_data.py
scripts/ops/: daily_research.py  daily_research.sh  render_pages.py
scripts/reports/: build_period_quant_output.py
tests/: test_analysis_api.py  test_apply_strategy_decision.py  test_cache.py  test_config.py  test_daily_report_schema.py  test_daily_signal_strategy.py  test_data_loader.py  test_judge.py  test_logging.py  test_metrics.py  test_model.py  test_notify_message.py  test_order_json_compatibility.py  test_portfolio.py  test_portfolio_costs.py  test_prior.py  test_production_settings.py  test_render_pages.py  test_report_api.py  test_services_store.py  test_signal.py  test_strategy_rule_backtest.py  test_strategy_rules.py  test_strategy_rules_api.py  test_tax.py  test_threshold_comparison.py
(+124 files in other folders)
