[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juslag"
version = "0.1.0"
description = "Japan-U.S. sector lead-lag strategy using subspace-regularized PCA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "numpy>=1.26",
  "pandas>=2.2",
  "pandas-market-calendars>=4.4",
  "PyYAML>=6.0",
  "requests>=2.31",
  "scipy>=1.12",
  "yfinance>=0.2.54",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
